--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -3,7 +3,15 @@
 {% block title %}Liste des sessions{% endblock %}
 
 {% block body %}
+    <h1>Liste des sessions</h1>
+
+    <a class="btn btn-primary" href="{{ path('add_session') }}">Ajouter un session</a> <br>
 
 
-
+    {% for session in sessions %}
+        <a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a> 
+        <a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}">Edit</a>
+        <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}">Delete</a>
+        <br>
+    {% endfor %}
 {% endblock %}
