--- a/templates/stagiaire/index.html.twig
+++ b/templates/stagiaire/index.html.twig
@@ -5,13 +5,29 @@
 {% block body %}
     <h1>Liste des stagiaires</h1>
 
-    <a class="btn btn-primary" href="{{ path('add_stagiaire') }}">Ajouter un stagiaire</a> <br>
+    <a class="btn btn-primary" href="{{ path('add_stagiaire') }}">Ajouter un stagiaire</a> <br><br>
 
-
-    {% for stagiaire in stagiaires %}
-        <a href="{{ path('show_stagiaire', {'id': stagiaire.id }) }}">{{stagiaire}}</a> 
-        <a class="btn btn-warning" href="{{ path('edit_stagiaire', {'id': stagiaire.id }) }}">Edit</a>
-        <a class="btn btn-danger" href="{{ path('delete_stagiaire', {'id': stagiaire.id }) }}">Delete</a>
-        <br>
-    {% endfor %}
+    <table class="table table-dark table-striped">
+        <thead>
+            <tr>
+                <th>Stagiaire</th>
+                <th>Ville</th>
+                <th>Email</th>
+                <th>Téléphone</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for stagiaire in stagiaires %}
+        <tr>
+            <td><a href="{{ path('show_stagiaire', {'id': stagiaire.id }) }}">{{stagiaire}}</a></td> 
+            <td>{{stagiaire.ville}}</td> 
+            <td>{{stagiaire.email}}</td> 
+            <td>{{stagiaire.telephone}}</td> 
+            <td><a class="btn btn-warning" href="{{ path('edit_stagiaire', {'id': stagiaire.id }) }}">Edit</a>
+            <a class="btn btn-danger" href="{{ path('delete_stagiaire', {'id': stagiaire.id }) }}">Delete</a></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
