--- a/templates/session/show.html.twig
+++ b/templates/session/show.html.twig
@@ -67,7 +67,13 @@
                     {% for stagiaire in nonInscrits %}
                     <tr>
                         <td>{{ stagiaire }}</td>
-                        <td><a href="{{ path('subscribe_session', {'idSe': session.id,'idSt': stagiaire.id }) }}"><i class="fa-solid fa-user-plus"></i></a></td>
+                        <td><a href="{{ path('subscribe_session', {'idSe': session.id,'idSt': stagiaire.id }) }}"><i class="fa-solid fa-user-plus"></i></a>
+                            {% for message in app.flashes('notice') %}
+                            <div class="flash-notice">
+                                {{ message }}
+                            </div>
+                            {% endfor %}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -129,7 +135,8 @@
                                 <div class="flash-notice">
                                     {{ message }}
                                 </div>
-                            {% endfor %}<input type="number" min="1" id="nbJours" name="nbJours" size="2"/> jours</td>
+                                {% endfor %}
+                            <input type="number" min="1" id="nbJours" name="nbJours" size="2"/> jours</td>
                             <td><button type="submit" name="submit" class="unstyled-button"><i class="fa-solid fa-file-circle-plus"></i></button></td>
                         </form>
                     </tr>
