--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -5,90 +5,115 @@
 {% block body %}
     <h1>Liste des sessions</h1>
 
-    <a class="btn btn-primary" href="{{ path('add_session') }}">Ajouter un session</a> <br>
+    <a class="btn btn-primary" href="{{ path('add_session') }}">Ajouter un session</a> <br><br>
 
 
     <h2>Sessions en cours</h2>
 
-    <table class="table table-dark table-striped">
-            <thead>
-                <tr>
-                    <th>Statut</th>
-                    <th>Session</th>
-                    <th>Date de début</th>
-                    <th>Date de fin</th>
-                    <th>Inscrits</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-    {% for session in inProgressSessions %}
-                <tr>
-                    <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
-                    <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
-                    <td>{{ session.dateDebut | date("d/m/y") }}</td>
-                    <td>{{ session.dateFin | date("d/m/y") }}</td>
-                    <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
-                    <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
-                    <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
-                </tr>
-    {% endfor %}
-            </tbody>
-    </table>
+    {% if inProgressSessions | length == 0 %}
+
+        <p>Pas de sessions en cours</p>
+
+    {% else %}
+
+        <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Statut</th>
+                        <th>Session</th>
+                        <th>Date de début</th>
+                        <th>Date de fin</th>
+                        <th>Inscrits</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+        {% for session in inProgressSessions %}
+                    <tr>
+                        <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
+                        <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
+                        <td>{{ session.dateDebut | date("d/m/y") }}</td>
+                        <td>{{ session.dateFin | date("d/m/y") }}</td>
+                        <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
+                        <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
+                        <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
+                    </tr>
+        {% endfor %}
+                </tbody>
+        </table>
+
+    {% endif %}
 
     <h2>Sessions à venir</h2>
 
-    <table class="table table-dark table-striped">
-            <thead>
-                <tr>
-                    <th>Statut</th>
-                    <th>Session</th>
-                    <th>Date de début</th>
-                    <th>Date de fin</th>
-                    <th>Inscrits</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-    {% for session in comeSessions %}
-                <tr>
-                    <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
-                    <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
-                    <td>{{ session.dateDebut | date("d/m/y") }}</td>
-                    <td>{{ session.dateFin | date("d/m/y") }}</td>
-                    <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
-                    <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
-                    <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
-                </tr>
-    {% endfor %}
-            </tbody>
-    </table>
+    {% if comeSessions | length == 0 %}
+
+        <p>Pas de sessions à venir</p>
+
+    {% else %}
+
+        <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Statut</th>
+                        <th>Session</th>
+                        <th>Date de début</th>
+                        <th>Date de fin</th>
+                        <th>Inscrits</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+        {% for session in comeSessions %}
+                    <tr>
+                        <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
+                        <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
+                        <td>{{ session.dateDebut | date("d/m/y") }}</td>
+                        <td>{{ session.dateFin | date("d/m/y") }}</td>
+                        <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
+                        <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
+                        <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
+                    </tr>
+        {% endfor %}
+                </tbody>
+        </table>
+
+    {% endif %}
 
     <h2>Sessions passées</h2>
 
-    <table class="table table-dark table-striped">
-            <thead>
-                <tr>
-                    <th>Statut</th>
-                    <th>Session</th>
-                    <th>Date de début</th>
-                    <th>Date de fin</th>
-                    <th>Inscrits</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-    {% for session in pastSessions %}
-                <tr>
-                    <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
-                    <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
-                    <td>{{ session.dateDebut | date("d/m/y") }}</td>
-                    <td>{{ session.dateFin | date("d/m/y") }}</td>
-                    <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
-                    <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
-                    <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
-                </tr>
-    {% endfor %}
-            </tbody>
-    </table>
+    {% if pastSessions | length == 0 %}
+
+        <p>Pas de sessions passées</p>
+
+    {% else %}
+
+        <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Statut</th>
+                        <th>Session</th>
+                        <th>Date de début</th>
+                        <th>Date de fin</th>
+                        <th>Inscrits</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+        {% for session in pastSessions %}
+                    <tr>
+                        <td>{% if session.complet %}<span class="badge text-bg-danger">Session complète</span>{% endif %}</td>
+                        <td><a href="{{ path('show_session', {'id': session.id }) }}">{{session}}</a></td>
+                        <td>{{ session.dateDebut | date("d/m/y") }}</td>
+                        <td>{{ session.dateFin | date("d/m/y") }}</td>
+                        <td>{{ session.getPlaceReservee ~ '/' ~ session.nbPlace }}</td>
+                        <td><a class="btn btn-warning" href="{{ path('edit_session', {'id': session.id }) }}"><i class="fa-regular fa-pen-to-square"></i></a>
+                        <a class="btn btn-danger" href="{{ path('delete_session', {'id': session.id }) }}"><i class="fa-solid fa-trash-can"></i></a></td>
+                    </tr>
+        {% endfor %}
+                </tbody>
+        </table>
+
+    {% endif %}
+
 {% endblock %}
